# adk-samples

./: .gitignore  Makefile  README.md
.agents/skills/adk-samples/: SKILL.md
.agents/skills/adk-samples/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: adk-samples-instincts.yaml
.claude/skills/adk-samples/: SKILL.md
.codex/: AGENTS.md
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
docs/: claude-config-samples.md
examples/claude_configs/: claude_desktop_config.json  cline_mcp_settings.json
python/CloudflareDNS/: update-dns.py
python/agents/: README.md
python/agents/RAG/eval/: test_eval.py
python/agents/RAG/rag/: __init__.py  agent.py  prompts.py
python/agents/auth-provider-demo/: .env.example  README.md  conftest.py  pyproject.toml  requirements.txt
python/agents/auth-provider-demo/auth_provider_demo/: __init__.py  agent.py  auth_manager.py  auth_provider.py  demo.py  mock_oauth_server.py  tools.py
python/agents/auth-provider-demo/notebooks/: 00_overview_auth_manager.ipynb  01_agent_to_agent_auth.ipynb  02_agent_to_mcp_auth.ipynb  03_agent_gateway_psc.ipynb  README.md
python/agents/auth-provider-demo/tests/: test_auth_manager.py  test_auth_provider.py
python/agents/llm-auditor/: Dockerfile  pyproject.toml
python/agents/llm-auditor/eval/: test_eval.py
python/agents/llm-auditor/llm_auditor/: agent.py  run.sh
python/agents/llm-auditor/tests/: test_agents.py
python/agents/wiz/: wizmcp-sha256  wizmcp-sha256.sig
scripts/: README.md  Repair-ClaudeSkills.ps1
(+16 files in other folders)
