[project]
name = "auth-provider-demo"
version = "0.1.0"
description = "ADK sample demonstrating 2-legged and 3-legged OAuth2 via a shared auth provider abstraction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # The core provider library, demo, and tests need only the standard library.
    # google-adk is required only for agent.py (the ADK LlmAgent wiring).
    "google-adk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth_provider_demo"]
